--- a/tests/fixtures/hexlet_co_response_with_files.html
+++ b/tests/fixtures/hexlet_co_response_with_files.html
@@ -5,11 +5,11 @@
   <title>
    Курсы по программированию Хекслет
   </title>
-  <link href="/assets/application.css" media="all" rel="stylesheet"/>
-  <link href="/courses" rel="canonical"/>
+  <link href="page-loader-hexlet-repl-co_files/page-loader-hexlet-repl-co-assets-application.css" media="all" rel="stylesheet"/>
+  <link href="page-loader-hexlet-repl-co_files/page-loader-hexlet-repl-co-courses.html" rel="canonical"/>
  </head>
  <body>
-  <img alt="Иконка профессии Node.js-программист" src="page-loader-hexlet-repl-co_files/assets-professions-nodejs.png"/>
+  <img alt="Иконка профессии Node.js-программист" src="page-loader-hexlet-repl-co_files/page-loader-hexlet-repl-co-assets-professions-nodejs.png"/>
   <h3>
    <a href="/professions/nodejs">
     Node.js-программист
