add links and scripts download ability

--- a/tests/fixtures/hexlet_co_response.html
+++ b/tests/fixtures/hexlet_co_response.html
@@ -16,6 +16,6 @@
    </a>
   </h3>
  </body>
- <script src="/script.js">
+ <script src="https://page-loader.hexlet.repl.co/packs/js/script.js">
  </script>
 </html>
