--- a/tests/fixtures/hexlet_co_response_with_files.html
+++ b/tests/fixtures/hexlet_co_response_with_files.html
@@ -16,6 +16,6 @@
    </a>
   </h3>
  </body>
- <script src="/script.js">
+ <script src="page-loader-hexlet-repl-co_files/page-loader-hexlet-repl-co-packs-js-script.js">
  </script>
 </html>
