--- a/tests/fixtures/hexlet_co_response.html
+++ b/tests/fixtures/hexlet_co_response.html
@@ -18,4 +18,6 @@
  </body>
  <script src="https://page-loader.hexlet.repl.co/packs/js/script.js">
  </script>
+ <script src="packs/js/script.js">
+ </script>
 </html>
