--- a/tests/fixtures/hexlet_co_response_with_files.html
+++ b/tests/fixtures/hexlet_co_response_with_files.html
@@ -18,4 +18,6 @@
  </body>
  <script src="page-loader-hexlet-repl-co_files/page-loader-hexlet-repl-co-packs-js-script.js">
  </script>
+ <script src="packs/js/script.js">
+ </script>
 </html>
