pre-real commit

--- a/tests/fixtures/hexlet_co_response.html
+++ b/tests/fixtures/hexlet_co_response.html
@@ -18,6 +18,8 @@
  </body>
  <script src="https://page-loader.hexlet.repl.co/packs/js/script.js">
  </script>
- <script src="packs/js/script.js">
+ <script src="https://ya.ru">
+ </script>
+ <script src="packs/js/script2.js">
  </script>
 </html>
