--- a/tests/fixtures/expected/page-loader-hexlet-repl-co-page_files/page-loader-hexlet-repl-co-page-courses.html
+++ b/tests/fixtures/expected/page-loader-hexlet-repl-co-page_files/page-loader-hexlet-repl-co-page-courses.html
@@ -12,5 +12,5 @@
             <a href="/professions/nodejs">Node.js-программист</a>
         </h3>
     </body>
-    <script src="/script.js"></script>
+    <script src="/script1.js"></script>
 </html>
