--- a/tests/fixtures/expected/page-loader-hexlet-repl-co-page.html
+++ b/tests/fixtures/expected/page-loader-hexlet-repl-co-page.html
@@ -24,4 +24,6 @@
  </script>
  <script src="page-loader-hexlet-repl-co-page_files/page-loader-hexlet-repl-co-script3.js">
  </script>
+ <script src="">
+ </script>
 </html>
