--- a/tests/fixtures/expected/page-loader-hexlet-repl-co-page.html
+++ b/tests/fixtures/expected/page-loader-hexlet-repl-co-page.html
@@ -18,7 +18,7 @@
  </body>
  <script src="page-loader-hexlet-repl-co-page_files/page-loader-hexlet-repl-co-page-packs-js-script1.js">
  </script>
- <script src="https://ya.ru">
+ <script src="https://another.page-loader.hexlet.repl.co/page/packs/js/script1.js">
  </script>
  <script src="page-loader-hexlet-repl-co-page_files/page-loader-hexlet-repl-co-page-packs-js-script2.js">
  </script>
