--- a/tests/fixtures/page-loader-hexlet-repl-co-page.html
+++ b/tests/fixtures/page-loader-hexlet-repl-co-page.html
@@ -18,7 +18,7 @@
  </body>
  <script src="https://page-loader.hexlet.repl.co/page/packs/js/script1.js">
  </script>
- <script src="https://ya.ru">
+ <script src="https://another.page-loader.hexlet.repl.co/page/packs/js/script1.js">
  </script>
  <script src="packs/js/script2.js">
  </script>
